--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,5 +1,5 @@
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
-  <input id="message" type="text" name="message" value="">
+  <input placeholder="You can only input 254 characters" id="message" type="text" name="message" value="" oninvalid="alert('What do you want to say?')" required>
   <input type="submit" value="Submit">
 </form>
