--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -3,6 +3,9 @@
   {{#each posts}}
   <li>{{this.message}}</li> 
   <li>{{this.likes}} likes</li>
+  <li>{{this.user_id.first_name}}</li>
+  <li>{{this.createdAt}}</li>
+  <br>
   {{/each}}
 </ul>
 
