profile page added, link added and formatted some int tests to get them working. Currently last test failin

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,7 @@
         <p>You need to login.</p>
       {{else}}  
        <p>Hello, {{current_user}}, you are logged in.</p>
+       <a id='profile-link' href="/posts/profile">View your profile</a>
         <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
         </form>
