--- a/views/posts/profile.hbs
+++ b/views/posts/profile.hbs
@@ -1,5 +1,10 @@
-<h1>Timeline</h1>
 
+<p>Hello.Welcome to your profile page.</p>
+
+<p>Name: {{current_user}}</p>
+<p>Profile Picture:</p>
+<p>DOB: {{current_user_dob}}</p>
+<p>Number of Posts:</p>
 
 <ul class="posts">
   {{#each posts}}
@@ -10,5 +15,3 @@
   <br>
   {{/each}}
 </ul>
-
-<a class="new-post-link" href="/posts/new">New post</a>
