made some changes to try and get like function working

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   </head>
   <body>
   <nav class="nav">
