--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -14,21 +14,18 @@
           <a class="navbar-brand" href="#">Acebook</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/">Home</a></li>
+          <li class="nav-home"><a href="/">Home</a></li>
           {{#if newUser}}
-          <li><a href="/sessions/new">Login</a></li>
-          <li><a href="/users/new">Sign up</a></li>
+          <li><a id='login-link' href="/sessions/new">Login</a></li>
+          <li><a id='signup-link' href="/users/new">Sign up</a></li>
+        </ul>
           {{else}} 
-          <li><a href="/posts/profile">My profile</a></li>
+          <li><a id='profile-link' href="/posts/profile">My profile</a></li>
           <li><a href="/posts">Timeline</a></li>
           <li><a href="/posts/new">New post</a></li>
-          <li class ="logOutButton"><div>
-            <form class="form-inline" action='/sessions?_method=DELETE' method='POST'>
-              <input type="submit" value="Log Out">
-            </form>
-          </div></li>
-          {{/if}}
         </ul>
+        <div class ="logOutButton"><form class="form-inline" action='/sessions?_method=DELETE' method='POST'><input type="submit" value="Log Out"></form></div> 
+        {{/if}}
       </div>
     </nav>
 
@@ -39,21 +36,15 @@
         <p>You need to login.</p>
       {{else}}  
        <p>Hello, {{current_user}}, you are logged in.</p>
-       <a id='profile-link' href="/posts/profile">View your profile</a>
-        <form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Log Out">
-        </form>
+       {{!-- <a id='profile-link' href="/posts/profile">View your profile</a> --}}
+        {{!-- <form action='/sessions?_method=DELETE' method='POST'> --}}
+      {{!-- <input type="submit" value="Log Out">
+        </form> --}}
           
       {{/if}}    
 
     <div>Share your life with your friends!</div>
 
     {{{body}}}
-
-    <script>
-            function myFunction() {
-                document.getElementById("nav navbar-nav").submit();
-            }
-    </script>
   </body>
 </html>
