--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -13,12 +13,12 @@
     <form id="new-comment-form" action="/posts/comments" method="post">
      <input placeholder="You can only input 254 characters" id="message" type="text" name="comments" value="">
       <input type="hidden" id="hiddenbutton" name="id" value={{this.id}}>  
-      <input type="hidden" id="hiddenbutton" name="comments" value={{this.comments}}>
-     <button type="submit" id="comment_button">Submit</button>
+      {{!-- <input type="hidden" id="hiddenbutton" name="comments" value={{this.comments}}> --}}
+     <button type="submit" id="comment_button" value={{this.comments}}>Submit</button>
      </form>
      <p id="demo"></p>
   </div>
-    <li>{{this.comments}}</li>
+  <li>{{this.comments}}</li>
   <br>
   <br>
   {{/each}}
