--- a/views/posts/profile.hbs
+++ b/views/posts/profile.hbs
@@ -7,11 +7,15 @@
 <p>Number of Posts:</p>
 
 <ul class="posts">
+  {{!-- looks through the posts table --}}
   {{#each posts}}
-  <li>{{this.message}}</li> 
-  <li>{{this.likes}} likes</li>
-  <li>{{this.user_id.first_name}}</li>
-  <li>{{this.createdAt}}</li>
-  <br>
-  {{/each}}
+  {{!-- {{#when this.user_id.email 'eq' req.session.user.email }} --}}
+     <li>{{this.message}}</li> 
+      <li>{{this.likes}} likes</li>
+      <li>{{this.user_id.first_name}}</li>
+      <li>{{dateFormat this.createdAt "dddd, MMMM Do YYYY, h:mm:ss a"}}</li>
+      <li>{{this.user_id.email}}</li>
+      <br>
+ {{!-- {{/when}} --}}
+ {{/each}}
 </ul>
