added basic comment functionality

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -19,8 +19,8 @@
      </form>
      <p id="demo"></p>
   </div>
-  <li>{{this.comments.comment}}</li>
-  <li>{{this.comments.commenter}}</li>
+  <li>{{this.comments.commenter}}: {{this.comments.comment}}</li>
+  {{!-- <li>{{this.comments.commenter}}</li> --}}
   <br>
   <br>
   {{/each}}
