comments still in progress...

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -20,16 +20,15 @@
      <p id="demo"></p>
   </div>
 
-    {{#each comments.commenter}}
-    <li>{{this.comment}}</li>
-    {{/each}}
-    {{!-- {{#each comments.commenter}}
+<li>{{comments}}</li>
+    {{!-- {{#each comments}}
     <li>{{this}}</li>
     {{/each}} --}}
 
   <br>
   <br>
   {{/each}}
+
 
 <script> 
   function showDiv(event) {
