--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,7 +72,7 @@ a {
 
 textarea {
   width: 100%;
-  height: 150px;
+  height: 50px;
   padding: 12px 20px;
   box-sizing: border-box;
   border: 2px solid #ccc;
@@ -93,4 +93,12 @@ textarea {
   padding: 20px 20px 20px 20px;
   margin-bottom: 10px;
   box-shadow: 5px 5px 5px 2px rgba(205, 172, 4, 0.411);
+}
+
+.navbar-default .navbar-brand {
+  color:rgb(240, 236, 216)
+}
+
+.navbar-default .navbar-nav > li > a {
+  color:rgb(240, 236, 216)
 }
