--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,8 +14,8 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Acebook</a>
         </div>
-        <ul class="nav navbar-nav">
-          <li class="nav-home"><a href="/">Home</a></li>
+        <ul class='nav navbar-nav'>
+          <li><a id='nav-home' href="/">Home</a></li>
           {{#if newUser}}
           <li><a id='login-link' href="/sessions/new">Login</a></li>
           <li><a id='signup-link' href="/users/new">Sign up</a></li>
