--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Acebook</a>
+          <a href="/"> <img width="60px" src="/images/logo.png"></a>
         </div>
         <ul class="nav navbar-nav">
           <li class="nav-home"><a href="/">Home</a></li>
